<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WidgetActivity"
    android:id="@+id/clPrincipal">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

<!--    android:textSize="@dimen/tvTitleSize"-->
<!--    android:textColor="@color/red"-->
<!--    android:layout_marginStart="@dimen/tvTitleMargin"-->
<!--    android:layout_marginEnd="@dimen/tvTitleMargin"-->
<!--    android:maxLines="1"-->
<!--    android:textAlignment="center"-->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practica1"
        app:layout_constraintBottom_toTopOf="@+id/glTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/title"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glTitle" >

        <Button
            android:id="@+id/btnPurple"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/btnPurple"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnBlack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/btnBlack"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnRed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/btnRed"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnOrange"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:text="@string/btnOrange"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    


</androidx.constraintlayout.widget.ConstraintLayout>